<resources>
    <string name="app_name">ComicViet</string>
    <string name="title_activity_login">ComicViet</string>
    <string name="sign_in">SIGN IN</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="re_enter_password">Re-enter password</string>
    <string name="login">LOGIN</string>
    <string name="need_a_account"><u>Need an account?</u></string>
    <string name="already_have_account"><u>Already have account?</u></string>
    <string name="password_missmatch">Your password and confirmation password do not match!</string>
    <string name="email_invalid">Email address is invalid!</string>
    <string name="miss_password">Please input password!</string>
    <string name="miss_re_enter_password">Please re-enter password!</string>
    <string name="wrong_user">Wrong user name or password!</string>
    <string name="login_success">Login successful!</string>
    <string name="register_success">Register successful! Please login!</string>
    <string name="sign_out">Sign out</string>
    <string name="default_client_id" translatable="false">611023012423-d6q4bktpv134cei9bt2cvqga4l4s9d8l.apps.googleusercontent.com</string>
    <string name="open_tool_bar">Open Toolbar</string>
    <string name="close_tool_bar">Close Toobar</string>
</resources>
